--- a/p8105_hw6_wq2161.Rmd
+++ b/p8105_hw6_wq2161.Rmd
@@ -5,3 +5,118 @@ date: "11/29/2021"
 output: github_document
 ---
 
+```{r setup, include = FALSE}
+library(tidyverse)
+library(viridis)
+library(modelr)
+library(purrr)
+
+knitr::opts_chunk$set(
+  warning = FALSE,
+  fig.width = 8,
+  fig.height = 6,
+  out.width = "90%"
+)
+
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
+
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
+```
+
+## Problem 1
+
+Load and clean the data for regression analysis.
+
+```{r load_and_clean, message = FALSE}
+birthweight = read_csv("data/birthweight.csv")
+
+# Check for missing data
+sum(is.na(birthweight))
+
+birthweight = birthweight %>%
+  janitor::clean_names() %>%
+  mutate(
+    babysex = recode(babysex, `1` = "male", `2` = "female"),
+    frace = factor(frace, ordered = FALSE),
+    malform = recode(malform, `0` = "absent", `1` = "present"),
+    mrace = factor(mrace, ordered = FALSE)
+  ) %>%
+  relocate(bwt)
+
+birthweight
+```
+
+Propose a regression model for birthweight.
+
+```{r}
+model_1 = lm(bwt ~ babysex + wtgain, data = birthweight)
+
+birthweight %>% 
+  add_residuals(model_1) %>% 
+  add_predictions(model_1) %>%
+  ggplot(aes(x = pred, y = resid)) + 
+  geom_point(alpha = 0.5) +
+  geom_abline(slope = 0, intercept = 0, color = "red") +
+  labs(
+    title = "Model 1 Residuals Against Fitted Values",
+    x = "Fitted Values",
+    y = "Residuals",
+    caption = "Data From birthweight"
+  )
+```
+
+I made this model by hypothesizing that birth weight is associated with baby’s sex and mother’s weight gain during pregnancy.
+
+Compare the model to two others.
+
+```{r}
+model_2 = lm(bwt ~ blength + gaweeks, data = birthweight)
+
+model_3 = lm(bwt ~ bhead + blength + babysex + bhead * blength + bhead * babysex + blength * babysex + bhead * blength * babysex, data = birthweight)
+
+cv_df = crossv_mc(birthweight, 100)
+
+cv_df =
+  cv_df %>%
+   mutate(
+    train = map(train, as_tibble),
+    test = map(test, as_tibble))
+
+cv_df = 
+  cv_df %>% 
+  mutate(
+    mod_1 = map(train, ~lm(bwt ~ babysex + wtgain, data = .x)),
+    mod_2 = map(train, ~lm(bwt ~ blength + gaweeks, data = .x)),
+    mod_3 = map(train, ~lm(bwt ~ bhead + blength + babysex + bhead * blength + bhead * babysex + blength * babysex + bhead * blength * babysex, data = as_tibble(.x)))) %>% 
+  mutate(
+    rmse_1 = map2_dbl(mod_1, test, ~rmse(model = .x, data = .y)),
+    rmse_2 = map2_dbl(mod_2, test, ~rmse(model = .x, data = .y)),
+    rmse_3 = map2_dbl(mod_3, test, ~rmse(model = .x, data = .y)))
+
+cv_df %>% 
+  select(starts_with("rmse")) %>% 
+  pivot_longer(
+    everything(),
+    names_to = "model", 
+    values_to = "rmse",
+    names_prefix = "rmse_") %>% 
+  mutate(model = fct_inorder(model)) %>% 
+  ggplot(aes(x = model, y = rmse)) + 
+  geom_violin() +
+  labs(
+    title = "The Average Prediction Error of Each Model",
+    x = "Model",
+    y = "RMSE",
+    caption = "Data from birthweight"
+  )
+```
+
+## Problem 2
+
+
