--- a/p8105_hw6_wq2161.md
+++ b/p8105_hw6_wq2161.md
@@ -26,26 +26,7 @@ birthweight = birthweight %>%
     mrace = factor(mrace, ordered = FALSE)
   ) %>%
   relocate(bwt)
-
-birthweight
 ```
-
-    ## # A tibble: 4,342 × 20
-    ##      bwt babysex bhead blength delwt fincome frace gaweeks malform menarche
-    ##    <dbl> <chr>   <dbl>   <dbl> <dbl>   <dbl> <fct>   <dbl> <chr>      <dbl>
-    ##  1  3629 female     34      51   177      35 1        39.9 absent        13
-    ##  2  3062 male       34      48   156      65 2        25.9 absent        14
-    ##  3  3345 female     36      50   148      85 1        39.9 absent        12
-    ##  4  3062 male       34      52   157      55 1        40   absent        14
-    ##  5  3374 female     34      52   156       5 1        41.6 absent        13
-    ##  6  3374 male       33      52   129      55 1        40.7 absent        12
-    ##  7  2523 female     33      46   126      96 2        40.3 absent        14
-    ##  8  2778 female     33      49   140       5 1        37.4 absent        12
-    ##  9  3515 male       36      52   146      85 1        40.3 absent        11
-    ## 10  3459 male       33      50   169      75 2        40.7 absent        12
-    ## # … with 4,332 more rows, and 10 more variables: mheight <dbl>, momage <dbl>,
-    ## #   mrace <fct>, parity <dbl>, pnumlbw <dbl>, pnumsga <dbl>, ppbmi <dbl>,
-    ## #   ppwt <dbl>, smoken <dbl>, wtgain <dbl>
 
 Propose a regression model for birthweight.
 
@@ -62,11 +43,11 @@ birthweight %>%
     title = "Model 1 Residuals Against Fitted Values",
     x = "Fitted Values",
     y = "Residuals",
-    caption = "Data From birthweight"
+    caption = "Data from birthweight"
   )
 ```
 
-<img src="p8105_hw6_wq2161_files/figure-gfm/unnamed-chunk-1-1.png" width="90%" />
+<img src="p8105_hw6_wq2161_files/figure-gfm/model_1-1.png" width="90%" />
 
 I made this model by hypothesizing that birth weight is associated with
 baby’s sex and mother’s weight gain during pregnancy.
@@ -78,24 +59,22 @@ model_2 = lm(bwt ~ blength + gaweeks, data = birthweight)
 
 model_3 = lm(bwt ~ bhead + blength + babysex + bhead * blength + bhead * babysex + blength * babysex + bhead * blength * babysex, data = birthweight)
 
-cv_df = crossv_mc(birthweight, 100)
-
-cv_df =
-  cv_df %>%
-   mutate(
+cv_df = 
+  crossv_mc(birthweight, 100) %>%
+  mutate(
     train = map(train, as_tibble),
     test = map(test, as_tibble))
 
 cv_df = 
   cv_df %>% 
   mutate(
-    mod_1 = map(train, ~lm(bwt ~ babysex + wtgain, data = .x)),
-    mod_2 = map(train, ~lm(bwt ~ blength + gaweeks, data = .x)),
-    mod_3 = map(train, ~lm(bwt ~ bhead + blength + babysex + bhead * blength + bhead * babysex + blength * babysex + bhead * blength * babysex, data = as_tibble(.x)))) %>% 
+    mod_1 = map(.x = train, ~lm(bwt ~ babysex + wtgain, data = .x)),
+    mod_2 = map(.x = train, ~lm(bwt ~ blength + gaweeks, data = .x)),
+    mod_3 = map(.x = train, ~lm(bwt ~ bhead + blength + babysex + bhead * blength + bhead * babysex + blength * babysex + bhead * blength * babysex, data = .x))) %>% 
   mutate(
-    rmse_1 = map2_dbl(mod_1, test, ~rmse(model = .x, data = .y)),
-    rmse_2 = map2_dbl(mod_2, test, ~rmse(model = .x, data = .y)),
-    rmse_3 = map2_dbl(mod_3, test, ~rmse(model = .x, data = .y)))
+    rmse_1 = map2_dbl(.x = mod_1, .y = test, ~rmse(model = .x, data = .y)),
+    rmse_2 = map2_dbl(.x = mod_2, .y = test, ~rmse(model = .x, data = .y)),
+    rmse_3 = map2_dbl(.x = mod_3, .y = test, ~rmse(model = .x, data = .y)))
 
 cv_df %>% 
   select(starts_with("rmse")) %>% 
@@ -115,7 +94,7 @@ cv_df %>%
   )
 ```
 
-<img src="p8105_hw6_wq2161_files/figure-gfm/unnamed-chunk-2-1.png" width="90%" />
+<img src="p8105_hw6_wq2161_files/figure-gfm/cross_validation-1.png" width="90%" />
 
 ## Problem 2
 
@@ -133,39 +112,11 @@ weather_df =
     tmin = tmin / 10,
     tmax = tmax / 10) %>%
   select(name, id, everything())
-
-weather_df
 ```
 
-    ## # A tibble: 365 × 6
-    ##    name           id          date        prcp  tmax  tmin
-    ##    <chr>          <chr>       <date>     <dbl> <dbl> <dbl>
-    ##  1 CentralPark_NY USW00094728 2017-01-01     0   8.9   4.4
-    ##  2 CentralPark_NY USW00094728 2017-01-02    53   5     2.8
-    ##  3 CentralPark_NY USW00094728 2017-01-03   147   6.1   3.9
-    ##  4 CentralPark_NY USW00094728 2017-01-04     0  11.1   1.1
-    ##  5 CentralPark_NY USW00094728 2017-01-05     0   1.1  -2.7
-    ##  6 CentralPark_NY USW00094728 2017-01-06    13   0.6  -3.8
-    ##  7 CentralPark_NY USW00094728 2017-01-07    81  -3.2  -6.6
-    ##  8 CentralPark_NY USW00094728 2017-01-08     0  -3.8  -8.8
-    ##  9 CentralPark_NY USW00094728 2017-01-09     0  -4.9  -9.9
-    ## 10 CentralPark_NY USW00094728 2017-01-10     0   7.8  -6  
-    ## # … with 355 more rows
-
-Using the 5000 bootstrap estimates, identify the 2.5% and 97.5%
-quantiles to provide a 95% confidence interval for est.r.squared and
-log(est.beta0 \* est.beta1).
-
-``` r
-lm(tmax ~ tmin, data = weather_df) %>%
-  broom::tidy()
-```
-
-    ## # A tibble: 2 × 5
-    ##   term        estimate std.error statistic   p.value
-    ##   <chr>          <dbl>     <dbl>     <dbl>     <dbl>
-    ## 1 (Intercept)     7.21    0.226       31.8 3.81e-107
-    ## 2 tmin            1.04    0.0170      61.2 2.98e-193
+Use 5000 bootstrap samples and, for each bootstrap sample, produce
+estimates of r̂2 and log(β̂0∗β̂1). Plot the distribution of your estimates,
+and describe these in words.
 
 ``` r
 bootstrap_rsquared =
@@ -176,18 +127,20 @@ bootstrap_rsquared =
     results = map(models, broom::glance)) %>% 
   select(-strap, -models) %>% 
   unnest(results) %>%
-  summarize(
-    ci_lower = quantile(r.squared, 0.025), 
-    ci_upper = quantile(r.squared, 0.975)
-  )
+  select(.id, r.squared)
 
-bootstrap_rsquared
+bootstrap_rsquared %>%
+  ggplot(aes(r.squared)) +
+  geom_density() +
+  labs(
+    title = "The Distribution of R^2 By Bootstrap",
+    x = "R^2",
+    y = "Density",
+    caption = "Data from 2017 Central Park weather data"
+  )
 ```
 
-    ## # A tibble: 1 × 2
-    ##   ci_lower ci_upper
-    ##      <dbl>    <dbl>
-    ## 1    0.895    0.927
+<img src="p8105_hw6_wq2161_files/figure-gfm/estimates_and_distribution-1.png" width="90%" />
 
 ``` r
 bootstrap_log_betas =
@@ -205,16 +158,54 @@ bootstrap_log_betas =
   ) %>%
   mutate(
     log_betas = log(`(Intercept)` * tmin)
-  ) %>%
-  summarize(
-    ci_lower = quantile(log_betas, 0.025), 
-    ci_upper = quantile(log_betas, 0.975)
   )
 
-bootstrap_log_betas
+bootstrap_log_betas %>%
+  ggplot(aes(log_betas)) +
+  geom_density() +
+  labs(
+    title = "The Distribution of Log(B0 * B1) By Bootstrap",
+    x = "Log(B0 * B1)",
+    y = "Density",
+    caption = "Data from 2017 Central Park weather data"
+  )
+```
+
+<img src="p8105_hw6_wq2161_files/figure-gfm/estimates_and_distribution-2.png" width="90%" />
+
+The distribution of r.squared is approximately normal but moderately
+left skewed with the highest density between r.squared = 0.91 and 0.92.
+By the definition of r.squared, the model fits the data well. The
+distribution of log(beta0 \* beta1) is approximately normal with the
+highest density between log(beta0 \* beta1) = 2.00 and 2.025. The
+skewness is less obvious than that of r.squared. To improve the
+distribution plot, we could try more bootstrap samples.
+
+Using the 5000 bootstrap estimates, identify the 2.5% and 97.5%
+quantiles to provide a 95% confidence interval for r̂2 and log(β̂0∗β̂1).
+
+``` r
+bootstrap_rsquared %>%
+  summarize(
+    ci_lower = quantile(r.squared, 0.025), 
+    ci_upper = quantile(r.squared, 0.975)
+  )
 ```
 
     ## # A tibble: 1 × 2
     ##   ci_lower ci_upper
     ##      <dbl>    <dbl>
-    ## 1     1.96     2.06
+    ## 1    0.895    0.928
+
+``` r
+bootstrap_log_betas %>%
+  summarize(
+    ci_lower = quantile(log_betas, 0.025), 
+    ci_upper = quantile(log_betas, 0.975)
+  )
+```
+
+    ## # A tibble: 1 × 2
+    ##   ci_lower ci_upper
+    ##      <dbl>    <dbl>
+    ## 1     1.97     2.06
