--- a/p8105_hw6_wq2161.md
+++ b/p8105_hw6_wq2161.md
@@ -50,7 +50,11 @@ birthweight %>%
 <img src="p8105_hw6_wq2161_files/figure-gfm/model_1-1.png" width="90%" />
 
 I made this model by hypothesizing that birth weight is associated with
-baby’s sex and mother’s weight gain during pregnancy.
+baby’s sex and mother’s weight gain during pregnancy. I chose baby’s sex
+as a predictor because the average birth weight of male newborn is
+greater than female. Besides, a study shows that “Maternal weight gain
+during pregnancy increases birth weight independent of genetic factors”,
+thus I chose mother’s weight gain during pregnancy as another predictor.
 
 Compare the model to two others.
 
@@ -195,7 +199,7 @@ bootstrap_rsquared %>%
     ## # A tibble: 1 × 2
     ##   ci_lower ci_upper
     ##      <dbl>    <dbl>
-    ## 1    0.895    0.928
+    ## 1    0.893    0.927
 
 ``` r
 bootstrap_log_betas %>%
@@ -208,4 +212,4 @@ bootstrap_log_betas %>%
     ## # A tibble: 1 × 2
     ##   ci_lower ci_upper
     ##      <dbl>    <dbl>
-    ## 1     1.97     2.06
+    ## 1     1.96     2.06
